# Random-Desktop-App

./: .gitignore  CMakeLists.txt  CMakePresets.json  README.md  main.cpp  mainwindow.cpp  vcpkg.json
src/app/: CMakeLists.txt  camerawidget.cpp  camerawidget.h  mainwindow.cpp  mainwindow.h
